--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ grade-tracker.sublime-project
 grade-tracker.sublime-workspace
 log/*.log
 public/uploads/*
+/spec/support/uploads/*
 tmp/*
 .ruby-gemset
 .ruby-version
