--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -9,7 +9,7 @@ engines:
   coffeelint:
     enabled: false
   duplication:
-    enabled: true
+    enabled: false
     config:
       languages:
       - ruby
