Switching over to double quotes

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -689,6 +689,7 @@ Style/SpecialGlobalVars:
 Style/StringLiterals:
   Description: 'Checks if uses of quotes match the configured preference.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#consistent-string-literals'
+  EnforcedStyle: double_quotes
   Enabled: true
 
 Style/StringLiteralsInInterpolation:
