--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -175,7 +175,7 @@ Style/DeprecatedHashMethods:
 
 Style/Documentation:
   Description: 'Document classes and non-namespace modules.'
-  Enabled: false
+  Enabled: true
 
 Style/DotPosition:
   Description: 'Checks the position of the dot in multi-line method calls.'
