Indentation of comments

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,10 @@
 # This is used to easily disable Style/* checks
 AllCops:
   DisabledByDefault: true
+  Exclude:
+    - "db/**/*"
+    - "config/**/*"
+    - "script/**/*"
 
 ################## STYLE #################################
 
