--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -202,3 +202,8 @@ Style/ElseAlignment:
 Style/EmptyElse:
   Description: 'Avoid empty else-clauses.'
   Enabled: true
+
+Style/EmptyLineBetweenDefs:
+  Description: 'Use empty lines between defs.'
+  StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#empty-lines-between-methods'
+  Enabled: true
