Remove extra empty lines

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -207,3 +207,7 @@ Style/EmptyLineBetweenDefs:
   Description: 'Use empty lines between defs.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#empty-lines-between-methods'
   Enabled: true
+
+Style/EmptyLines:
+  Description: "Don't use several empty lines in a row."
+  Enabled: true
