--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -624,3 +624,13 @@ Style/SpaceBeforeBlockBraces:
 Style/SpaceBeforeComma:
   Description: 'No spaces before commas.'
   Enabled: true
+
+Style/SpaceBeforeComment:
+  Description: >-
+                 Checks for missing space between code and a comment on the
+                 same line.
+  Enabled: true
+
+Style/SpaceBeforeSemicolon:
+  Description: 'No spaces before semicolons.'
+  Enabled: true
