Eighty character limits

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,12 @@ AllCops:
     - "config/**/*"
     - "script/**/*"
     - "Vagrantfile"
+    - "spec/**/*"
+    - "lib/**/*"
+    - "bin/**/*"
+    - "Gemfile"
+    - "custom_plan.rb"
+    - "Rakefile"
 
 ################## STYLE #################################
 
@@ -832,7 +838,7 @@ Metrics/CyclomaticComplexity:
 Metrics/LineLength:
   Description: 'Limit lines to 80 characters.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#80-character-limits'
-  Enabled: false
+  Enabled: true
 
 Metrics/MethodLength:
   Description: 'Avoid methods longer than 10 lines of code.'
