--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@
 # This is used to easily disable Style/* checks
 AllCops:
   DisabledByDefault: true
+  TargetRubyVersion: 2.2
   Exclude:
     - "db/**/*"
     - "config/**/*"
