--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -840,6 +840,9 @@ Metrics/CyclomaticComplexity:
 
 Metrics/LineLength:
   Description: 'Limit lines to 80 characters.'
+  Max: 80
+  AllowHeredoc: true
+  AllowURI: true
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#80-character-limits'
   Enabled: true
 
