--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ config/database.yml
 config/mongoid.yml
 db/backups/*
 log/*.log
-public/uploads/**/*
+public/uploads/*
 /spec/support/uploads/*
 tmp/*
 .ruby-gemset
@@ -18,4 +18,3 @@ node_modules/*
 /.vagrant
 authorized_keys
 line-count.txt
-uploads/**/*
